2017-10-27  <bdubbs@linuxfromscratch.org>
   * 83-cdrom-symlinks.rules: Adjust test for writable root directory.

2014-03-02  <bdubbs@linuxfromscratch.org>
   * Makefile.lfs: Remove build procedures leaving only LFS rules

2014-02-16  <bdubbs@linuxfromscratch.org>
   * Makefile.lfs: Adjust warning flags.  Adjust linking rules to
     allow build with util-linux in LFS's /tools directory.

2010-01-26  Matt Burgess <matthew@linuxfromscratch.org>
   * 55-lfs.rules: Remove lots of rules that have been merged upstream.
   * 61-cdrom.rules: Remove as upstream has a replacement.
   * doc/*: Cleanup and rewrite now that the rules are much simpler.

2009-09-25  Bryan Kadzban <bryan@linuxfromscratch.org>
   * 55-lfs.rules: Make the RTC rule (which runs setclock) work for people
     that don't use the RTC-class driver -- add another copy of the rule,
     using KERNEL=="rtc" instead of SUBSYSTEM=="rtc".  Also move the ACTION
     match before the assignment to MODE.

2009-05-23  Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * 55-lfs.rules: Set the rtc by udev upon boot.  Removed aio device from
     udev configuration so defaults are used.

2009-05-16  Bryan Kadzban <bryan@linuxfromscratch.org>
   * 55-lfs.rules: Adopt udev permissions for random, urandom, kmsg, and
     input devices (including psaux, which probably doesn't exist anymore
     anyway).

2009-05-16  Matt Burgess <matthew@linuxfromscratch.org>
   * 55-lfs.rules: Remove the block rule as it was only setting
     permissions that Udev will set by default
   * 55-lfs.rules: Remove the rfcomm rule as the group it sets is already
     included in upstream's rule
   * 55-lfs-rules: Remove the tape rules as the group they sets is already
     included in upstream's rules

2009-03-15  Bryan Kadzban <bryan@linuxfromscratch.org>
   * 55-lfs.rules: Remove the ISDN-handling rules (replaced with upstream's
     version, which has a better match via SUBSYSTEM).