@@ -40,6 +40,45 @@
     appropriate for the entry or if needed the entire day's listitem.
     -->
 
+    <listitem>
+      <para>2023-07-28</para>
+      <itemizedlist>
+        <listitem>
+           <para>[bdubbs] - Update udev-lfs tarball to remove obsolete
+           cdrom rules and references to ISDN devices. Fixes
+          <ulink url='&lfs-ticket-root;5291'>#5291</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to wheel-0.41.0 (Python Module). Fixes
+          <ulink url='&lfs-ticket-root;5290'>#5290</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to tar-1.35. Fixes
+          <ulink url='&lfs-ticket-root;5287'>#5287</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to systemd-254. Fixes
+          <ulink url='&lfs-ticket-root;5293'>#5293</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to meson-1.2.0. Fixes
+          <ulink url='&lfs-ticket-root;5286'>#5286</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to linux-6.4.7. Fixes
+          <ulink url='&lfs-ticket-root;5288'>#5288</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to gcc-13.2.0. Fixes
+          <ulink url='&lfs-ticket-root;5292'>#5292</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to file-5.45. Fixes
+          <ulink url='&lfs-ticket-root;5294'>#5294</ulink>.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
     <listitem revision='sysv'>
       <para>2023-07-28</para>
       <itemizedlist>
