@@ -100,9 +100,9 @@
     <!--<listitem>
        <para>Expect-&expect-version;</para>
     </listitem>-->
-    <!--<listitem>
+    <listitem>
        <para>File-&file-version;</para>
-    </listitem>-->
+    </listitem>
     <!--<listitem>
       <para>Findutils-&findutils-version;</para>
     </listitem>-->
@@ -250,15 +250,15 @@
     <listitem revision="sysv">
       <para>Sysklogd-&sysklogd-version;</para>
     </listitem>
-    <listitem revision="systemd">
+    <listitem>
       <para>Systemd-&systemd-version;</para>
     </listitem>
     <!--<listitem revision="sysv">
       <para>SysVinit-&sysvinit-version;</para>
     </listitem>-->
-    <!--<listitem>
+    <listitem>
       <para>Tar-&tar-version;</para>
-    </listitem>-->
+    </listitem>
     <!--<listitem>
       <para>Tcl-&tcl-version;</para>
     </listitem>-->
@@ -274,9 +274,9 @@
     <listitem>
       <para>Vim-&vim-version;</para>
     </listitem>
-    <!--<listitem>
+    <listitem>
       <para>wheel-&wheel-version;</para>
-    </listitem>-->
+    </listitem>
     <!--<listitem>
       <para>XML-Parser-&xml-parser-version;</para>
     </listitem>-->
