@@ -127,7 +127,7 @@ meson setup \
 install -vm755 -d /usr/{lib,share}/pkgconfig
 install -vm755 udevadm                     /usr/bin/
 install -vm755 systemd-hwdb                /usr/bin/udev-hwdb
-ln      -sv    ../bin/udevadm              /usr/sbin/udevd
+ln      -svfn  ../bin/udevadm              /usr/sbin/udevd
 cp      -av    libudev.so{,*[0-9]}         /usr/lib/
 install -vm644 ../src/libudev/libudev.h    /usr/include/
 install -vm644 src/libudev/*.pc            /usr/lib/pkgconfig/
@@ -147,7 +147,7 @@ make -f &udev-lfs-version;/Makefile.lfs install</userinput></screen>
 
     <!-- Please make sure systemd man pages tarball has a common leading
          component in the path.  -->
-<screen><userinput remap="install">tar -xf ../../systemd-man-pages-253.tar.xz --strip-components=1       \
+<screen><userinput remap="install">tar -xf ../../systemd-man-pages-&systemd-man-version;.tar.xz --strip-components=1       \
     -C /usr/share/man --wildcards '*/udev*' '*/libudev*'              \
                                   '*/systemd-'{hwdb,udevd.service}.8
 sed 's/systemd\(\\\?-\)/udev-/' /usr/share/man/man8/systemd-hwdb.8    \
