@@ -172,10 +172,10 @@
 <!ENTITY expect-tmp-du "3.9 MB">
 <!ENTITY expect-tmp-sbu "0.2 SBU">
 
-<!ENTITY file-version "5.44">
-<!ENTITY file-size "1,159 KB">
+<!ENTITY file-version "5.45">
+<!ENTITY file-size "1,218 KB">
 <!ENTITY file-url "https://astron.com/pub/file/file-&file-version;.tar.gz">
-<!ENTITY file-md5 "a60d586d49d015d842b9294864a89c7a">
+<!ENTITY file-md5 "26b2a96d4e3a8938827a1e572afd527a">
 <!ENTITY file-home "https://www.darwinsys.com/file/">
 <!ENTITY file-tmp-du "36 MB">
 <!ENTITY file-tmp-sbu "0.1 SBU">
@@ -218,10 +218,10 @@
 <!ENTITY gawk-fin-du "43 MB">
 <!ENTITY gawk-fin-sbu "0.2 SBU">
 
-<!ENTITY gcc-version "13.1.0">
-<!ENTITY gcc-size "85,402 KB">
+<!ENTITY gcc-version "13.2.0">
+<!ENTITY gcc-size "85,800 KB">
 <!ENTITY gcc-url "&gnu;gcc/gcc-&gcc-version;/gcc-&gcc-version;.tar.xz">
-<!ENTITY gcc-md5 "43e4de77f2218c83ca675257ea1af9ef">
+<!ENTITY gcc-md5 "e0e48554cc6e4f261d55ddee9ab69075">
 <!ENTITY gcc-sha256 "">
 <!ENTITY gcc-home "https://gcc.gnu.org/">
 <!ENTITY gcc-tmpp1-du "3.8 GB">
@@ -433,12 +433,12 @@
 
 <!ENTITY linux-major-version "6">
 <!ENTITY linux-minor-version "4">
-<!ENTITY linux-patch-version "3">
+<!ENTITY linux-patch-version "7">
 <!--<!ENTITY linux-version "&linux-major-version;.&linux-minor-version;">-->
 <!ENTITY linux-version "&linux-major-version;.&linux-minor-version;.&linux-patch-version;">
-<!ENTITY linux-size "134,557 KB">
+<!ENTITY linux-size "134,566 KB">
 <!ENTITY linux-url "&kernel;linux/kernel/v&linux-major-version;.x/linux-&linux-version;.tar.xz">
-<!ENTITY linux-md5 "c83363136e61977c63d655733424d37a">
+<!ENTITY linux-md5 "f3d802a16823550866e7dcafb1350bb5">
 <!ENTITY linux-home "https://www.kernel.org/">
 <!-- measured for 5.13.4 / gcc-11.1.0 on x86_64 : minimum is
  allnoconfig rounded down to allow for ongoing cleanups,
@@ -493,10 +493,10 @@
 <!ENTITY markupsafe-fin-du "544 KB">
 <!ENTITY markupsafe-fin-sbu "less than 0.1 SBU">
 
-<!ENTITY meson-version "1.1.1">
-<!ENTITY meson-size "2,076 KB">
+<!ENTITY meson-version "1.2.0">
+<!ENTITY meson-size "2,132 KB">
 <!ENTITY meson-url "&github;/mesonbuild/meson/releases/download/&meson-version;/meson-&meson-version;.tar.gz">
-<!ENTITY meson-md5 "0f810b31b26156989ac9321fa2063a04">
+<!ENTITY meson-md5 "677616183f2c5e03e2139b06280129a0">
 <!ENTITY meson-home "https://mesonbuild.com">
 <!ENTITY meson-fin-du "41 MB">
 <!ENTITY meson-fin-sbu "less than 0.1 SBU">
@@ -643,20 +643,20 @@
 <!ENTITY sysklogd-fin-du "0.7 MB">
 <!ENTITY sysklogd-fin-sbu "less than 0.1 SBU">
 
-<!ENTITY systemd-version  "253">
+<!ENTITY systemd-version  "254">
 <!--<!ENTITY systemd-stable   "6b4878d">-->
 <!-- The above entity is used whenever we move to a stable backport branch. In the event of a critical problem or kernel
      change that is incompatible, we will switch to the backport branch until the next stable release. -->
-<!ENTITY systemd-size     "11,708 KB">
+<!ENTITY systemd-size     "13,985 KB">
 <!ENTITY systemd-url      "&github;/systemd/systemd/archive/v&systemd-version;/systemd-&systemd-version;.tar.gz">
 <!--<!ENTITY systemd-url      "&anduin-sources;/systemd-&systemd-version;-&systemd-stable;.tar.xz">-->
-<!ENTITY systemd-md5      "7cf12ee8a91a04306fc6cf290eed42e8">
+<!ENTITY systemd-md5      "0d266e5361dc72097b6c18cfde1c0001">
 <!ENTITY systemd-home     "https://www.freedesktop.org/wiki/Software/systemd/">
-<!ENTITY systemd-man-version "253">
-<!ENTITY systemd-man-size "600 KB">
+<!ENTITY systemd-man-version "254">
+<!ENTITY systemd-man-size "626 KB">
 <!--<!ENTITY systemd-man-url  "&anduin-sources;/systemd-man-pages-&systemd-version;-&systemd-stable;.tar.xz">-->
 <!ENTITY systemd-man-url  "&anduin-sources;/systemd-man-pages-&systemd-man-version;.tar.xz">
-<!ENTITY systemd-man-md5  "8b54792c9433fc8db8e5d10db326802d">
+<!ENTITY systemd-man-md5  "fc32faeac581e1890ca27fcea3858410">
 <!ENTITY systemd-fin-du   "258 MB">
 <!ENTITY systemd-fin-sbu  "0.7 SBU">
 
@@ -668,10 +668,10 @@
 <!ENTITY sysvinit-fin-du "4.4 MB">
 <!ENTITY sysvinit-fin-sbu "less than 0.1 SBU">
 
-<!ENTITY tar-version "1.34">
-<!ENTITY tar-size "2,174 KB">
+<!ENTITY tar-version "1.35">
+<!ENTITY tar-size "2,263 KB">
 <!ENTITY tar-url "&gnu;tar/tar-&tar-version;.tar.xz">
-<!ENTITY tar-md5 "9a08d29a9ac4727130b5708347c0f5cf">
+<!ENTITY tar-md5 "a2d8042658cfd8ea939e6d911eaf4152">
 <!ENTITY tar-home "&gnu-software;tar/">
 <!ENTITY tar-tmp-du "38 MB">
 <!ENTITY tar-tmp-sbu "0.1 SBU">
@@ -709,10 +709,10 @@
 <!ENTITY udev-fin-du "130 MB">
 <!ENTITY udev-fin-sbu "0.2 SBU">
 
-<!ENTITY udev-lfs-version "udev-lfs-20171102">
-<!ENTITY udev-lfs-size    "11 KB">
+<!ENTITY udev-lfs-version "udev-lfs-20230728">
+<!ENTITY udev-lfs-size    "10 KB">
 <!ENTITY udev-lfs-url     "&anduin-sources;/&udev-lfs-version;.tar.xz">
-<!ENTITY udev-lfs-md5     "27cd82f9a61422e186b9d6759ddf1634">
+<!ENTITY udev-lfs-md5     "8a3b921e3a28d36ac46d17137d920268">
 <!ENTITY udev-lfs-home    " ">
 
 <!ENTITY util-linux-minor "2.39">
@@ -737,10 +737,10 @@
 <!ENTITY vim-fin-du "235 MB">
 <!ENTITY vim-fin-sbu "2.4 SBU">
 
-<!ENTITY wheel-version "0.40.0">
-<!ENTITY wheel-size "96 KB">
+<!ENTITY wheel-version "0.41.0">
+<!ENTITY wheel-size "95 KB">
 <!ENTITY wheel-url "&pypi-src;/w/wheel/wheel-&wheel-version;.tar.gz">
-<!ENTITY wheel-md5 "ec5004c46d1905da98bb5bc1a10ddd21">
+<!ENTITY wheel-md5 "aa72e4a9847874aae8302108fb0fd333">
 <!ENTITY wheel-home "&pypi-home;/wheel/">
 <!ENTITY wheel-fin-du "1.3 MB">
 <!ENTITY wheel-fin-sbu "less than 0.1 SBU">
