@@ -1,13 +1,0 @@
-# /etc/udev/rules.d/83-cdrom-symlinks.rules: Determine CD drive capability.
-
-ACTION!="add",          GOTO="cd_aliases_generator_end"
-SUBSYSTEM!="block",     GOTO="cd_aliases_generator_end"
-ENV{GENERATED}=="?*",   GOTO="cd_aliases_generator_end"
-
-# Fail the uevent if the autogenerated rules cannot be saved
-ENV{ID_CDROM}=="?*", PROGRAM="/bin/grep -c ' / [^[:space:]]* rw' /proc/mounts", \
-  RESULT!="1", RUN+="/bin/false", GOTO="cd_aliases_generator_end"
-
-ENV{ID_CDROM}=="?*", PROGRAM="write_cd_rules", SYMLINK+="%c"
-
-LABEL="cd_aliases_generator_end"
